--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "angular-datatables": "^17.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "datatables.net": "^2.0.8",
     "datatables.net-dt": "^2.0.8",
+    "jquery": "^3.7.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,7 +33,9 @@
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/datatables.net": "^1.12.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.30",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
